[project]
name = "primeiro-projeto-apis-com-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==2.3.0",
    "flask-cors==3.0.10",
    "flask-sqlalchemy==3.1.1",
    "pytest==7.4.3",
    "requests==2.31.0",
    "werkzeug==2.3.0",
]
